--- a/index.html
+++ b/index.html
@@ -4,82 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <!-- <link rel="stylesheet" href="style.css" /> -->
     <title>Web Text</title>
+
 </head>
 
 <body>
-    <header>
-        <h1>Trang Web Bán Hàng</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Trang Chủ </a></li>
-            <li><a href="#">Sản Phẩm</a></li>
-            <li><a href="#">Liên Hệ</a></li>
-        </ul>
-    </nav>
-    <div class="product-list">
-        <!-- Hiển thị duy nhất một sản phẩm trên mỗi hàng -->
-        <div class="product-card">
-            <img src="https://picsum.photos/id/684/600/400" alt="">
-            <h2>Sản Phẩm 1</h2>
-            <p>Mô tả sản phẩm 1.</p>
-            <p>Giá: $100</p>
-            <button class="button button4">Mua Ngay</button>
+    <div style="width: 595px; height: 842px; clip-path: inset(0); background-color: white; position: relative;">
+        <div style="position: absolute; left: 13px; top: 9px; width: 566px; height: 146px; background-color: #E4F5ED;"></div>
+        <div style="position: absolute; left: 36px; top: 24px; width: 107px; height: 107px;">
+          <div style="width: 107px; height: 107px; border-radius: 50%; background-color: #B8DED3;"></div>
+          <div style="position: absolute; left: 6.29px; top: 6.29px; width: 94.41px; height: 94.41px;">
+            <div style="width: 94.41px; height: 94.41px; border-radius: 50%; background-color: #777575;">
+                <div style="width: 94.41px; height: 94.5px; background-image: url('avatar.svg'); background-size: cover;"></div>
+            </div>
+            
+          </div>
         </div>
-        <!-- Bổ sung thêm sản phẩm -->
-        <div class="product-card">
-            <img src="https://picsum.photos/id/1025/600/400" alt="">
-            <h2>Sản Phẩm 2</h2>
-            <p>Mô tả sản phẩm 2.</p>
-            <p>Giá: $150</p>
-            <button class="button button4">Mua Ngay</button>
+        <div style="position: absolute; left: 178px; top: 24px; font-family: Arial; font-weight: bold; font-size: 20px; color: #0C9656;">Nguyễn Văn A</div>
+        <div style="position: absolute; left: 179px; top: 47px; font-family: Arial; font-size: 13px; color: black;">Nhân viên kinh doanh</div>
+        <div style="position: absolute; left: 179px; top: 69px; width: 79px; height: 14px;">
+          <div style="position: absolute; left: 23px; top: 1px; font-family: Arial; font-size: 11px; color: black;">19/05/1992</div>
+          <div style="width: 14px; height: 14px; border-radius: 50%; background-color: #0C9656;"></div>
         </div>
-        <div class="product-card">
-            <img src="https://picsum.photos/id/1060/600/400" alt="">
-            <h2>Sản Phẩm 3</h2>
-            <p>Mô tả sản phẩm 3.</p>
-            <p>Giá: $120</p>
-            <button class="button button4">Mua Ngay</button>
+        <div style="position: absolute; left: 384px; top: 69px; width: 47px; height: 14px;">
+          <div style="position: absolute; left: 23px; top: 1px; font-family: Arial; font-size: 11px; color: black;">Nam</div>
+          <div style="width: 14px; height: 14px; border-radius: 50%; background-color: #0C9656;"></div>
         </div>
-        <div class="product-card">
-            <img src="https://picsum.photos/id/30/600/400" alt="">
-            <h2>Sản Phẩm 4</h2>
-            <p>Mô tả sản phẩm 4.</p>
-            <p>Giá: $80</p>
-            <button class="button button4">Mua Ngay</button>
+        <div style="position: absolute; left: 179px; top: 92px; width: 104px; height: 14px;">
+          <div style="position: absolute; left: 23px; top: 1px; font-family: Arial; font-size: 11px; color: black;">(024) 6680 5588</div>
+          <div style="width: 14px; height: 14px; border-radius: 50%; background-color: #0C9656;"></div>
         </div>
-        <div class="product-card">
-            <img src="https://picsum.photos/id/431/600/400" alt="">
-            <h2>Sản Phẩm 5</h2>
-            <p>Mô tả sản phẩm 5.</p>
-            <p>Giá: $200</p>
-            <button class="button button4">Mua Ngay</button>
+        <div style="position: absolute; left: 384px; top: 92px; width: 145px; height: 14px;">
+          <div style="position: absolute; left: 23px; top: 1px; font-family: Arial; font-size: 11px; color: black;">nguyenvana@gmail.com</div>
+          <div style="width: 14px; height: 14px; border-radius: 50%; background-color: #0C9656;"></div>
         </div>
-    </div>
-    <div class="sidebar">
-        <div class="social-icons">
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Instagram</a>
-            <a href="#">LinkedIn</a>
+        <div style="position: absolute; left: 179px; top: 115px; width: 170px; height: 14px;">
+          <div style="position: absolute; left: 23px; top: 1px; font-family: Arial; font-size: 11px; color: black;">Số 1 đường Cầu Giấy, Hà Nội</div>
+          <div style="width: 14px; height: 14px; border-radius: 50%; background-color: #0C9656;"></div>
         </div>
-    </div>
-    <!-- Phần footer -->
-    <div class="footer">
-        <div class="footer-item">
-            <h3>Cột 1</h3>
-            <p>Nội dung cột 1.</p>
+        <div style="position: absolute; left: 384px; top: 115px; width: 110px; height: 14px;">
+          <div style="position: absolute; left: 23px; top: 1px; font-family: Arial; font-size: 11px; color: black;">https://fb.com/nva</div>
+          <div style="width: 14px; height: 14px; border-radius: 50%; background-color: #0C9656;"></div>
         </div>
-        <div class="footer-item">
-            <h3>Cột 2</h3>
-            <p>Nội dung cột 2.</p>
-        </div>
-        <div class="footer-item">
-            <h3>Cột 3</h3>
-            <p>Nội dung cột 3.</p>
-        </div>
+        <div style="position: absolute; left: 13px; top: 148px; width: 566px; height: 7px; background-color: #B7E2CE;"></div>
+        <div style="position: absolute; left: 1px; top: 155px; width: 369px; height: 687px; background-color: white;"></div>
     </div>
 </body>
 
